--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>timejs demo</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <title>Rototo demo</title>
+    <style>
+        body {
+
+            margin: 0px 0px 0px 0px;
+
+            padding: 0px 0px 0px 0px;
+            overflow: "hidden"
+        }
+    </style>
 </head>
 
 <body>
